# lbs-hackathon

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
server/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  celery_app.py  celery_healthcheck.sh  create_unique_index.py  database.py  example.json  logger.py  main.py  pyproject.toml  test_categories.py
server/domains/: __init__.py
server/domains/applications/: __init__.py  models.py  repository.py  routes.py
server/domains/auth/: __init__.py  models.py  repository.py  routes.py  utils.py
server/domains/candidates/: __init__.py  candidate_file_repository.py  models.py  repository.py  routes.py
server/domains/companies/: __init__.py  data_processor_repository.py  enrichment_models.py  models.py  repository.py  routes.py  service.py  tasks.py
server/domains/cv_builder/: __init__.py  models.py  pdf_generator.py  repository.py  routes.py
server/domains/job_listings/: __init__.py  categories.py  models.py  process_models.py  (+6 more)
server/integrations/: browser_automation.py  llms-full.txt
server/migrations/: migrate_company_id_to_objectid.py  migrate_job_listing_sources.py  migrate_source_ids_to_objectid.py
server/models/: applications.py  candidate_files.py  candidates.py
server/repositories/: applications.py  candidate_files.py  candidates.py  job_listings.py
server/routes/: applications.py  automation.py  candidates.py  job_listings.py
server/test_files/: agent_1.json  prompts.txt
server/utils/: files.py  open_ai_singleton.py  singleton_class.py  web_scraper.py
(+164 files in other folders)
