[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use==0.9.7",
    "fastapi[standard]>=0.121.3",
    "openai-agents>=0.6.1",
    "playwright>=1.56.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.38.0",
]
